TaskDto: pre-populate requester profile fields server-side
Per the user's directive 2026-04-30: "make sure backend is sending
that data in the dto for the feed." Honors the codebase principle
"backend shapes the data, frontend just displays" — feed surfaces
render the standard post anatomy (avatar + name + 3-dot menu) without
fanning out a separate POST /userinfo/profiles/batch round trip per
page-load.

TaskDto record extended with three nullable fields:
- requesterFirstName, requesterLastName — for the post header name
- requesterProfileImageUrl — for the avatar (or null → FE uses
  hashed initials background)

TaskService.withAuthors():
- Single-batch UserInfoRepo.findByUserEmailIn lookup keyed on
  lowercased emails distinct'd from the dto list
- Maps each TaskDto via the new TaskDto.withAuthor(UserInfo) folder
  method that preserves all other fields and only overlays the three
  new ones
- Tasks whose requesterEmail can't be resolved (deleted account,
  anon) flow through unchanged with null author fields — FE handles
  via email-as-name + initials fallback

Wired through every read path that returns TaskDto:
- discoverCommunity (community feed) — withAuthors after the
  Haversine + cap-50 trim, so we only do one DB round trip for the
  ≤50 visible tasks not the full candidate set
- listByGroup (group feed)
- listRequestedBy / listClaimedBy (My tasks)

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>